projects/compiler/test/typechecker/import/error_circular_dependency.2/mod.1.out
Error at %TEST_DIR%/typechecker/import/error_circular_dependency.2/mod.1.abra:1:15
Could not import module due to circular dependency
  |  import a from "./mod.2"
                   ^
The current module is itself imported by this module (or one of its imports), resulting in a cycle

Error at %TEST_DIR%/typechecker/import/error_circular_dependency.2/mod.2.abra:1:8
Invalid import
  |  import a from "./mod.3"
            ^
There's no exported value named 'a' in module './mod.3'
